gnome-session-check-accelerated: Set _GNOME_MAX_SCREEN_SIZE on the root window

Compute this from the minimum of the maximum texture size and the
maximum renderbuffer size.  gnome-settings-daemon may use this to avoid
setting mode configurations that exceed the screen dimensions.

https://bugzilla.gnome.org/show_bug.cgi?id=688252